# MaccabipediaCalendar

./: .gitignore  README.md  cal_setup.py  calendar_operations.py  create_event.py  credentials.json  delete_event.py  edit_event.py  get_games.py  get_lists.py  google_calendar_api.py  list_calendars.py  list_events.py  maccabi_tlv_site.py  main.py  parse_games.py  pyproject.toml  requirements.txt  token.pickle  types.py  update_event.py  upload_event.py
.github/: copilot-instructions.md
.github/workflows/: code_quality.yaml  update_maccabipedia_calendar.yaml
app/: main.py
app/config/: logging.py  settings.py
app/google_calendar/: google_calendar_api.py
app/models/: schemas.py
app/scrapers/: football_scraper.py
config/: logging.py
